project/stage/tests/accept/function_decl.ul
void thang(int a){
}

// int thing(int a, int b){
//   return 1;
// }


void main(){
  return;
}