project/stage/tests/reject/declare_var_out_of_order.ul
void main(){
  int thing;
  thing = 1;
  int otherThing;
  return;
}